--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
 		<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
 		alt="Blah Guy" height="32" />
 		<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
-		<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+		<a href="/">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main">
@@ -40,13 +40,11 @@
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
 		<em>Aleph's Website</em> media contents and text copyright &copy; 2025 Aleph Diallo, unless denoted otherwise. 
-		All rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+		All rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac&refurl=https://badbunsen.com"
 			title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
 			<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 				alt="DMCA.com Protection Status" />
 		</a>
-		<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
-		</script>
 	</div>
 
 	<div class="footerspace"></div>
