--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -48,7 +48,7 @@
 				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. 
 				All rights reserved.<br />
 				This site is DMCA protected.<br />
-				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac&refurl=https://badbunsen.com"
+				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 					title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
 					<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 						alt="DMCA.com Protection Status" />
