do you have instagram???

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -78,6 +78,8 @@
 			<!--i'm not active on twitter, like, at all, but it's cool to have 
 				just in case, i guess-->
 			<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
+			<!-- instagram because... duh! -->
+			<a href="https://instagram.com/badbunsen" rel="me">badbunsen.com on Instagram</a>
 			<!--might use youtube someday-->
 			<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
 			<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
