add social media

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -42,6 +42,13 @@
 			Krita and Inkscape, a Huion HS610 screenless drawing tablet, pencils and paper.<br />
 			I'll probably add an image at some point, just not now
 		</p>
+		<h2 id="socialmedia">social media</h2>
+		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.
+			Instagram: badbunsen<br>
+			Twitter (or &#x1D54F; for so-called right wing citizens of America): badbunsen<br>
+			GitHub (if it counts): badbunsen<br>
+			Tumblr: badbunsen
+		</p>
 		<h2 id="cred">credits</h2>
 		<p>
 			<strong>aleph diallo</strong> - design, code, management<br />
