--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -35,7 +35,7 @@
 
 	<div class="main">
 		<h1>appendix</h1>
-		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
+		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#socialmedia">[social media]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
 		<h2 id="tott">tools of the trade</h2>
 		<p>
 			Here's what I use to do artwork and pretty much anything else.<br />
