--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -43,8 +43,8 @@
 			I'll probably add an image at some point, just not now
 		</p>
 		<h2 id="socialmedia">social media</h2>
-		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.
-			Instagram: badbunsen<br>
+		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.<br>
+<!-- private			Instagram: badbunsen -->
 			Twitter (or &#x1D54F; for so-called right wing citizens of America): badbunsen<br>
 			GitHub (if it counts): badbunsen<br>
 			Tumblr: badbunsen
