--- a/sitedir/noscript/art.html
+++ b/sitedir/noscript/art.html
@@ -8,7 +8,7 @@
 <body>
 <p align="right"><iframe src="../stuff/grafx/sitegrafx/gifs/sphere_lq.gif" name="theframe" width="360" height="360" align="right">Nada frames!</iframe></p>
 <h1>2025</h1>
-<a href="../stuff/artwork/11.png" target="theframe"><img src="../stuff/artwork/thumbs/11.gif" width="64" height="64" border="0" /> <img src="../stuff/artwork/thumbs/01.gif" width="64" height="64" border="0" /></a><a href="../stuff/artwork/02.jpg" target="theframe">
+<a href="../stuff/artwork/13.png" target="theframe"><img src="../stuff/artwork/thumbs/13.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/12.jpg" target="theframe"><img src="../stuff/artwork/thumbs/12.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/11.png" target="theframe"><img src="../stuff/artwork/thumbs/11.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/01.jpg" target="theframe"><img src="../stuff/artwork/thumbs/01.gif" width="64" height="64" border="0" /></a><a href="../stuff/artwork/02.jpg" target="theframe">
 <img src="../stuff/artwork/thumbs/02.gif" width="64" height="64" border="0" /></a>
 <h1>2024</h1>
 <a href="../stuff/artwork/03.png" target="theframe"><img src="../stuff/artwork/thumbs/03.gif" width="64" height="64" border="0" /></a>
