--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -93,6 +93,8 @@ noscript version</a>. no pressure.
 		</div>
 		<div class="artscroll">
         <h3>2025</h3>
+        <img src="stuff/artwork/thumbs/13.gif" class="thumb" 
+		onclick="art_13(); shutDown();"/>
 		<img src="stuff/artwork/thumbs/12.gif" class="thumb" 
 		onclick="art_12(); shutDown();"/>
 		<img src="stuff/artwork/thumbs/11.gif" class="thumb" 
