--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -37,7 +37,7 @@
 			&#x2196; <a href="art.html">art</a><br />
 			&#x2196; <a href="video.html">video</a><br />
 			&#x2196; <a href="char.html">characters</a><br />
-			&#x2196; <a href="blog.html">blog</a><br />
+			&#x2196; <a href="https://badbunsen.tumblr.com" target="_blank">blog</a><br />
 			&#x2196; <a href="bio.html">bio</a><br />
 			&#x2196; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
 			&#x2196; <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
