--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -43,11 +43,12 @@
 			I'll probably add an image at some point, just not now
 		</p>
 		<h2 id="socialmedia">social media</h2>
-		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.<br>
+		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.<br />
 <!-- private			Instagram: badbunsen -->
-			Twitter (or &#x1D54F; for so-called right wing citizens of America): badbunsen<br>
-			GitHub (if it counts): badbunsen<br>
-			Tumblr: badbunsen
+			Twitter (or &#x1D54F; for so-called right wing citizens of America): <a href="https://x.com/badbunsen" target="_blank">badbunsen</a><br />
+			GitHub (if it counts): <a href="https://github.com/badbunsen">badbunsen</a><br />
+			Tumblr: <a href="https://badbunsen.tumblr.com" target="_blank">badbunsen.tumblr.com</a><br />
+			DeviantArt: <a href="https://www.deviantart.com/badbunsenagain" target="_blank">BadBunsenAgain</a><br />
 		</p>
 		<h2 id="cred">credits</h2>
 		<p>
