--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -63,7 +63,7 @@
 	<div style="display: none;">
 		<div class="h-card">
 			<!--my persona's pfp-->
-			<img class="u-photo" src="https://badbunsen.com/archive/2025_01_31/media/clipart/persona/profile_picture.png"
+			<img class="u-photo" src="https://badbunsen.com/stuff/grafx/clipart/pfp.png"
 				alt="An image of my persona" />
 			<!--My name and my website (which you're currently viewing)
 				 -->
@@ -74,15 +74,21 @@
 		<!--indieauth uses real social media handles to get people to login
 		to their services. this should also be hidden...-->
 		<div class="indieweb-auth">
+			<!--github-->
 			<a href="https://github.com/badbunsen" rel="me">@badbunsen on Github</a>
+			<!--tumblr-->
+			<a href="https://badbunsen.tumblr.com" rel="me">BadBunsen on Tumblr</a>
 			<!--i'm not active on twitter, like, at all, but it's cool to have 
 				just in case, i guess-->
 			<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
-			<!-- instagram because... duh! -->
+			<!-- instagram because... uhh... -->
 			<a href="https://instagram.com/badbunsen" rel="me">badbunsen.com on Instagram</a>
-			<!--might use youtube someday-->
+			<!--might post on youtube someday-->
 			<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
+			<!--email-->
 			<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
+			<!--deviantart-->
+			<a href="https://deviantart.com/badbunsenagain" rel="me">BadBunsenAgain on DeviantArt</a>
 		</div>
 	</div>
 </body>
