--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -71,16 +71,15 @@ noscript version</a>. no pressure.
 			<h3 id="aTitle"></h3>
 			<strong>Date finished</strong>: 
 			<span id="aDate">
-			</span><br style="display: none;">
-			<strong style="display: none;">Originally uploaded to 
-				<span id="aSite"></span>
-			</strong><br />
+			</span><br>
 			<strong>License</strong>: 
 			<span id="aLicense"></span><br />
 			<strong>Tools used</strong>: 
 			<span id="aTools">
 			</span><br />
-			<strong>Description</strong>: 
+			<strong id="aSiteOUP" style="display: none;">Originally uploaded to:</strong> <span id="aSite"></span>
+			<br />
+			<strong>Description</strong>: <br>
 			<span id="aDesc">
 			</span>
 		</p>
@@ -93,6 +92,8 @@ noscript version</a>. no pressure.
 		</div>
 		<div class="artscroll">
         <h3>2025</h3>
+		<img src="stuff/artwork/thumbs/14.gif" class="thumb" 
+		onclick="art_14(); shutDown();"/>
         <img src="stuff/artwork/thumbs/13.gif" class="thumb" 
 		onclick="art_13(); shutDown();"/>
 		<img src="stuff/artwork/thumbs/12.gif" class="thumb" 
