templatify pages with dreamweaver, exchange svgs for gifs... pt 1

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -3,26 +3,33 @@
 
 <head>
 	<link rel="shortcut icon" href="favicon.ico" />
+	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>
 		Appendix :: Aleph's Website
 	</title>
 	<meta name="title" content="Appendix" />
+	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
 
+	<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
 		content="The appendix section of Aleph's Website. If you're not into legal stuff, don't care for those I thank or just want to browse the site without info like the stuff here, you don't need this page." />
 	<meta property="og:description"
 		content="The appendix section of Aleph's Website. If you're not into legal stuff, don't care for those I thank or just want to browse the site without info like the stuff here, you don't need this page." />
 	<meta property="og:type" content="website" />
+	<!-- InstanceEndEditable -->
 
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+	<!-- InstanceBeginEditable name="canonical" -->
 	<link rel="canonical" href="https://badbunsen.com/appn.html" />
+	<!-- InstanceEndEditable -->
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -33,7 +40,7 @@
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
 	</div>
 
-	<div class="main">
+	<div class="main"><!-- InstanceBeginEditable name="content" -->
 		<h1>appendix</h1>
 		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#socialmedia">[social media]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
 		<h2 id="tott">tools of the trade</h2>
@@ -89,7 +96,7 @@
 		<br />
 		<strong>TL:DR;</strong> <strong style="color: #f00"><em>DON'T</em></strong> steal, sell, repost or train AI using my works. <strong style="color: #0f0"><em>DO</em></strong> repost linking back to my accounts and/or ask permission, use my works within fair use laws and request me if you want to use my works for merchandise (which, at the moment, is not possible).
 		</p>
-	</div>
+	<!-- InstanceEndEditable --></div>
 
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
