--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>
 		Art :: Aleph's Website
 	</title>
 	<meta name="title" content="Art :: Aleph's Website" />
+	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
 
-	<meta name="This is the art section of Aleph's Website, where he shares his... you guessed it!... art."
+	<!-- InstanceBeginEditable name="SEO" -->
+	<meta name="description"
 		content="This is the art section of Aleph's Website, where he shares his... you guessed it!... art." />
-	<meta property="og:This is the art section of Aleph's Website, where he shares his... you guessed it!... art."
+	<meta property="og:description"
 		content="This is the art section of Aleph's Website, where he shares his... you guessed it!... art." />
 	<meta property="og:type" content="website" />
+	<!-- InstanceEndEditable -->
 
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+	<!-- InstanceBeginEditable name="canonical" -->
 	<link rel="canonical" href="https://badbunsen.com/art.html" />
+	<!-- InstanceEndEditable -->
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
 	<link rel="stylesheet" href="stuff/stylesheets/art.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -34,7 +41,7 @@
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
-    <div class="main">
+    <div class="main"><!-- InstanceBeginEditable name="content" -->
 		<h1>art section</h1>
         <noscript>
 			<pre>
@@ -126,7 +133,7 @@ noscript version</a>. no pressure.
 		<script src="stuff/javascript/art.js">
 		</script>
         </div>
-	</div>
+	<!-- InstanceEndEditable --></div>
 
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
