--- a/sitedir/char.html
+++ b/sitedir/char.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>
 		Characters :: Aleph's Website
 	</title>
 	<meta name="title" content="Characters :: Aleph's Website" />
+	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
 
+	<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
-		content="Description" />
+		content="Characters I've created... I've got nothing else to say" />
 	<meta property="og:description"
-		content="Description" />
+		content="Characters I've created... I've got nothing else to say" />
 	<meta property="og:type" content="website" />
+	<!-- InstanceEndEditable -->
 
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+	<!-- InstanceBeginEditable name="canonical" -->
 	<link rel="canonical" href="https://badbunsen.com/link" />
+	<!-- InstanceEndEditable -->
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -33,7 +40,7 @@
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
-    <div class="main">
+    <div class="main"><!-- InstanceBeginEditable name="content" -->
 	<p>You won't be able to view their pages... yet, but for now this is what I have.</p>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/adam.png" alt="Adam" width="120" height="120"><br />
@@ -60,7 +67,7 @@
 		<img src="stuff/artwork/characterthumbs/alastor_pt2.png" alt="Alastor" width="120" height="120"><br />
 		Alastor B.
 		</div>
-	</div>
+	<!-- InstanceEndEditable --></div>
 
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
