--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
 	<title>
 		Aleph's Website
 	</title>
@@ -28,9 +28,9 @@
 
 <body>
 	<div class="middleme">
-		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.svg"
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.gif"
 		width="177" height="177" alt="blah guy">
-		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.svg"
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.gif"
 		width="177" height="177" alt="blah guy">
 		
 		<div class="navlinks">
