--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
 	<!-- InstanceBeginEditable name="doctitle" -->
 	<title>
 		Appendix :: Aleph's Website
@@ -10,6 +10,7 @@
 	<meta name="title" content="Appendix" />
 	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
+
 
 	<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
@@ -26,21 +27,21 @@
 	<link rel="canonical" href="https://badbunsen.com/appn.html" />
 	<!-- InstanceEndEditable -->
 
-	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
+	<link rel="stylesheet" href="/stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
 <body>
-	<div class="header">
-	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-	alt="Blah Guy" height="32" />
-	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
-	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
-	</div>
+    <div class="header">
+		<img src="/stuff/grafx/sitegrafx/logos/awebsite/blah_white.gif"
+		alt="Blah Guy" height="32" />
+		<img src="/stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.gif" height="32" /><br />
+		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+    </div>
 
-	<div class="main"><!-- InstanceBeginEditable name="content" -->
+    <div class="main"><!-- InstanceBeginEditable name="content" -->
 		<h1>appendix</h1>
 		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#socialmedia">[social media]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
 		<h2 id="tott">tools of the trade</h2>
@@ -95,8 +96,7 @@
 		<br />
 		<br />
 		<strong>TL:DR;</strong> <strong style="color: #f00"><em>DON'T</em></strong> steal, sell, repost or train AI using my works. <strong style="color: #0f0"><em>DO</em></strong> repost linking back to my accounts and/or ask permission, use my works within fair use laws and request me if you want to use my works for merchandise (which, at the moment, is not possible).
-		</p>
-	<!-- InstanceEndEditable --></div>
+		</p>	<!-- InstanceEndEditable --></div>
 
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
@@ -112,4 +112,4 @@
 
 	<div class="footerspace"></div>
 </body>
-</html>
+<!-- InstanceEnd --></html>
