--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
 	<link rel="shortcut icon" href="/favicon.ico" />
@@ -10,6 +10,7 @@
 	<meta name="title" content="Art :: Aleph's Website" />
 	<!-- InstanceEndEditable -->
 	<meta property="og:site_name" content="Aleph's Website" />
+
 
 	<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
@@ -26,8 +27,7 @@
 	<link rel="canonical" href="https://badbunsen.com/art.html" />
 	<!-- InstanceEndEditable -->
 
-	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
-	<link rel="stylesheet" href="stuff/stylesheets/art.css" />
+	<link rel="stylesheet" href="/stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
@@ -35,10 +35,10 @@
 
 <body>
     <div class="header">
-	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-	alt="Blah Guy" height="32" />
-	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
-	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="https://badbunsen.tumblr.com" target="_blank">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+		<img src="/stuff/grafx/sitegrafx/logos/awebsite/blah_white.gif"
+		alt="Blah Guy" height="32" />
+		<img src="/stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.gif" height="32" /><br />
+		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main"><!-- InstanceBeginEditable name="content" -->
@@ -149,4 +149,4 @@ noscript version</a>. no pressure.
 
 	<div class="footerspace"></div>
 </body>
-</html>
+<!-- InstanceEnd --></html>
