--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -27,22 +27,32 @@
 </head>
 
 <body>
-	<div class="middleme">
-		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.gif"
-		width="177" height="177" alt="blah guy">
-		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.gif"
-		width="177" height="177" alt="blah guy">
-		
-		<div class="navlinks">
+
+	<table width="100%" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+	  <tr>
+		<td align="middle">&nbsp;</td>
+	  </tr>
+	  <tr>
+		<td align="middle">
+		<!--contents of page-->
+		<table width="360" border="0" align="center" cellpadding="0" cellspacing="0">
+		<tr>
+		<td><img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.gif"
+		width="177" height="177" alt="blah guy" class="logo"></td>
+		<td><img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.gif"
+		width="177" height="177" alt="blah guy" class="logo"></td>
+		</tr>
+		<tr>
+		<td><div class="navlinks">
 			&#x2196; <a href="art.html">art</a><br />
 			&#x2196; <a href="video.html">video</a><br />
 			&#x2196; <a href="char.html">characters</a><br />
-			&#x2196; <a href="https://badbunsen.tumblr.com" target="_blank">blog</a><br />
+			&#x2196; <a href="blog.html" target="_blank">blog</a><br />
 			&#x2196; <a href="bio.html">bio</a><br />
 			&#x2196; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
 			&#x2196; <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
-		</div>
-		<div class="copybox">
+		</div></td>
+		<td><div class="copybox">
 			<p class="copyright">
 				<strong>copyright info</strong>
 				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. 
@@ -51,13 +61,21 @@
 				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 					title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
 					<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-						alt="DMCA.com Protection Status" />
-				</a>
+						alt="DMCA.com Protection Status" />				</a>
 				<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
 			</p>
-		</div>
-	</div>
+		</div></td>
+		</tr>
+		</table>
+		<!--end contents of page-->
+		</td>
+	  </tr>
+	  <tr>
+		<td align="middle">&nbsp;</td>
+	  </tr>
+</table>
+
 	
 	<!--hcard follies-->
 	<div style="display: none;">
@@ -90,7 +108,7 @@
 			<!--deviantart-->
 			<a href="https://deviantart.com/badbunsenagain" rel="me">BadBunsenAgain on DeviantArt</a>
 		</div>
-	</div>
+</div>
 </body>
 
 </html>
