--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -30,7 +30,9 @@
 	<link rel="stylesheet" href="/stuff/stylesheets/main.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+    <!-- InstanceBeginEditable name="head" -->
+	<link rel="stylesheet" href="stuff/stylesheets/art.css" />
+	<!-- InstanceEndEditable -->
 </head>
 
 <body>
