--- a/sitedir/noscript/art.html
+++ b/sitedir/noscript/art.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+<a href="/index.html" onclick="window.history.back(); return false;">back</a>
+<!-- i know it's a no-javascript version but it's only executed if JS is supported-->
+<br>
+<h1>Minimal version of the art page</h1>
 <p align="right"><iframe src="../stuff/grafx/sitegrafx/gifs/sphere_lq.gif" name="theframe" width="360" height="360" align="right">Nada frames!</iframe></p>
 <h1>2025</h1>
 <a href="../stuff/artwork/lq/14.gif" target="theframe"><img src="../stuff/artwork/thumbs/14.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/lq/13.gif" target="theframe"><img src="../stuff/artwork/thumbs/13.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/lq/12.gif" target="theframe"><img src="../stuff/artwork/thumbs/12.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/lq/11.gif" target="theframe"><img src="../stuff/artwork/thumbs/11.gif" width="64" height="64" border="0" /></a> <a href="../stuff/artwork/lq/01.gif" target="theframe"><img src="../stuff/artwork/thumbs/01.gif" width="64" height="64" border="0" /></a><a href="../stuff/artwork/lq/02.gif" target="theframe">
