--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -38,7 +38,7 @@
 		<img src="/stuff/grafx/sitegrafx/logos/awebsite/blah_white.gif"
 		alt="Blah Guy" height="32" />
 		<img src="/stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.gif" height="32" /><br />
-		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="http://badbunsen.com/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main"><!-- InstanceBeginEditable name="content" -->
@@ -74,7 +74,7 @@
 			alt="aleph's website."
 			height="16"></em></a> 
 			media contents Copyright &copy; 2025 Aleph Diallo unless otherwise noted; code &copy; 2025 Aleph Diallo and licensed under the <a href="https://github.com/badbunsen/badbunsen.github.io">BSD 3-Clause License</a>.<br />
-			<a href="https://badbunsen.com/archive/"
+			<a href="http://badbunsen.com/archive/"
 			target="_blank"><em>
 			Aleph's Website Archive</em></a> 
 			media contents and code Copyright &copy; 2021, 2022, 2023, 2024, 2025 Aleph Diallo, excluding 
