what i have so far

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -28,6 +28,9 @@
 
 <body>
 
+<div width="100%" height="32" style="background-color: #fc0;"><a href="markup_fireworks.html">Here's 
+  a sample of the next design that's coming up. it's not mobile friendly...</a></div>
+
 	<table width="100%" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
 	  <tr>
 		<td align="middle">&nbsp;</td>
