--- a/sitedir/markup_fireworks.html
+++ b/sitedir/markup_fireworks.html
@@ -4,6 +4,18 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html;">
 
+<style>
+  .hapellrollover {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    z-index: -1;
+  }
+  .table {
+    z-index: 1;
+  }
+</style>
+
 <script language="JavaScript">
 <!--
 <!-- hide
@@ -67,8 +79,8 @@ function MM_nbGroup(event, grpName) { //v3.0
 </script>
 </head>
 <body bgcolor="#6699CC" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif')" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
-<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="152" height="172" align="right"></a> 
-<table border="0" cellpadding="0" cellspacing="0" width="580">
+<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a> 
+<table class="table" border="0" cellpadding="0" cellspacing="0" width="580">
 <!-- fwtable fwsrc="markup_fireworks.png" fwbase="markup_fireworks.gif" fwstyle="Generic" fwdocid = "742308039" fwnested=""0" -->
   <script language="JavaScript">
   <!-- hide 
@@ -97,14 +109,14 @@ function MM_nbGroup(event, grpName) { //v3.0
    <td><img src="spacer.gif" width="1" height="76" border="0"></td>
   </tr>
   <tr>
-    <td rowspan="4" colspan="2" bgcolor="#6699cc" valign="top">Text text text text text text 
+    <td rowspan="4" colspan="2"  valign="top">Text text text text text text 
       text text text text text text text text text text text text text text text 
       text text text text text text text text text text text text text text text 
       text text text text text text text text text text text.</td>
    <td><img src="spacer.gif" width="1" height="73" border="0"></td>
   </tr>
   <tr>
-    <td colspan="2" bgcolor="#6699cc">
+    <td colspan="2" >
       <table border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td><a href="#" onClick="MM_nbGroup('down','group1','art','',1)" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
@@ -139,7 +151,7 @@ function MM_nbGroup(event, grpName) { //v3.0
    <td><img src="spacer.gif" width="1" height="21" border="0"></td>
   </tr>
   <tr>
-    <td colspan="2" bgcolor="#6699cc" valign="top"> 
+    <td colspan="2"  valign="top"> 
       <p><font size="-3">Aleph's Website media and text contents copyright &copy; 
         2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. All rights reserved.</font></p>
       <p><img src="stuff/grafx/buttons/viewdesktop_88x31.gif" width="88" height="31"><br><img src="stuff/grafx/buttons/mwm_dw_88x31.gif" width="88" height="31"><br><img src="stuff/grafx/buttons/mwm_fw_88x31.gif" width="88" height="31"></p>
