update hapell rendering

--- a/sitedir/markup_fireworks.html
+++ b/sitedir/markup_fireworks.html
@@ -3,16 +3,15 @@
 <title>Aleph's Website.</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
   .hapellrollover {
-    position: fixed;
+    position: absolute;
     top: 0px;
     right: 0px;
-    z-index: -1;
-  }
-  .table {
-    z-index: 1;
+    width: 112px;
+    height: 126px;
   }
 </style>
 
@@ -79,8 +78,7 @@ function MM_nbGroup(event, grpName) { //v3.0
 </script>
 </head>
 <body bgcolor="#6699CC" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif')" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
-<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a> 
-<table class="table" border="0" cellpadding="0" cellspacing="0" width="580">
+  <table class="table" border="0" cellpadding="0" cellspacing="0" width="580">
 <!-- fwtable fwsrc="markup_fireworks.png" fwbase="markup_fireworks.gif" fwstyle="Generic" fwdocid = "742308039" fwnested=""0" -->
   <script language="JavaScript">
   <!-- hide 
@@ -161,6 +159,8 @@ function MM_nbGroup(event, grpName) { //v3.0
 
 
 </table>
+
+<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a> 
 
 </body>
 </html>
